trying to add text

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(graph)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
+find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
 find_package(SDL2 REQUIRED SDL2)
 
 add_executable(graph
@@ -19,6 +19,12 @@ add_executable(graph
         drawing/sfml/SFMLDrawing.cpp
         drawing/sfml/SFMLDrawing.hpp
         drawing/GraphDrawing.cpp
-        drawing/GraphDrawing.hpp drawing/sdl/SDLDrawing.cpp drawing/sdl/SDLDrawing.hpp drawing/sdl/Primitives.cpp drawing/sdl/Primitives.hpp drawing/vertex_coord_generator/CoordGenerator.cpp drawing/vertex_coord_generator/CoordGenerator.hpp)
+        drawing/GraphDrawing.hpp
+        drawing/sdl/SDLDrawing.cpp
+        drawing/sdl/SDLDrawing.hpp
+        drawing/sdl/Primitives.cpp
+        drawing/sdl/Primitives.hpp
+        drawing/vertex_coord_generator/CoordGenerator.cpp
+        drawing/vertex_coord_generator/CoordGenerator.hpp)
 
 target_link_libraries(graph sfml-graphics sfml-audio SDL2)
